# rl-atari

./: LICENSE  README.md  environment.yaml  pyproject.toml
notebooks/: dqn.ipynb  run_space_invaders.ipynb
script/: atari_model.py  noisy_dense.py  replay_memory.py  requirements.txt  ring_buffer.py  run_model.py  segment_tree.py  test.ipynb  test_run.py  tf_check1.py  tf_check2.py  utils.py
