[tool.poetry]
name = "rl-atari"
version = "1.0.0"
description = "reinforcement learning for atari games"
authors = ["Dion Joren"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pandas = "^2.2.0"
numpy = "^1.26.4"
matplotlib = "^3.8.2"
tensorflow = "2.15.0"
ipykernel = "^6.29.2"
joblib = "^1.3.2"
imageio = "^2.33.1"
opencv-python = "^4.9.0.80"
tf-keras-vis = "^0.8.6"
typeguard = "2.13.3"
tensorflow-addons = "^0.23.0"
gym = {extras = ["accept-rom-license", "atari"], version = "^0.26.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
